--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<header>
 		<h1>Andy's Problem-Solving Tools</h1>
 		<p>Various development tools and other fun stuff I've built to make life easier.</p>
-		<p><a href="#" data-local="andrew.harrison.404" data-domain="gmail.com"><span class="fa-solid fa-envelope">Email</span></a>
+		<p id="contact"><a href="#" data-local="andrew.harrison.404" data-domain="gmail.com"><span class="fa-solid fa-envelope">Email</span></a>
 		 | <a href="https://github.com/wizard04wsu"><span class="fa-brands fa-github">GitHub</span></a>
 		 | <a href="https://www.linkedin.com/in/andrewharrison404/"><span class="fa-brands fa-linkedin">LinkedIn</span></a></p>
 	</header>
