more contact link styling

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 	<header>
 		<h1>Andy's Problem-Solving Tools</h1>
 		<p>Various development tools and other fun stuff I've built to make life easier.</p>
-		<p id="contact"><a href="#" data-local="andrew.harrison.404" data-domain="gmail.com"><span class="fa-solid fa-envelope"></span> Email</a>
-		 | <a href="https://github.com/wizard04wsu"><span class="fa-brands fa-github"></span> GitHub</a>
-		 | <a href="https://www.linkedin.com/in/andrewharrison404/"><span class="fa-brands fa-linkedin"></span> LinkedIn</a></p>
+		<p id="contact"><span class="fa-solid fa-envelope"></span> <a href="#" data-local="andrew.harrison.404" data-domain="gmail.com">Email</a>
+		 | <span class="fa-brands fa-github"></span> <a href="https://github.com/wizard04wsu">GitHub</a>
+		 | <span class="fa-brands fa-linkedin"></span> <a href="https://www.linkedin.com/in/andrewharrison404/">LinkedIn</a></p>
 	</header>
 	
 	<main id="projects">
