--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		<h1>Andy's Problem-Solving Tools</h1>
 		<p>Various development tools and other fun stuff I've built to make life easier.</p>
 		<p id="contact"><span class="fa-solid fa-envelope"></span> <a href="#" data-local="andrew.harrison.404" data-domain="gmail.com">Email</a>
-		 | <span class="fa-brands fa-github"></span> <a href="https://github.com/wizard04wsu">GitHub</a>
-		 | <span class="fa-brands fa-linkedin"></span> <a href="https://www.linkedin.com/in/andrewharrison404/">LinkedIn</a></p>
+		<span class="fa-brands fa-github"></span> <a href="https://github.com/wizard04wsu">GitHub</a>
+		<span class="fa-brands fa-linkedin"></span> <a href="https://www.linkedin.com/in/andrewharrison404/">LinkedIn</a></p>
 	</header>
 	
 	<main id="projects">
