Update description for Adaptive Image

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<h3>Adaptive Image Component</h3>
 				<img src="assets/adaptive-image.png" title="SVG image filling its container" alt="snip from the demo page showing an SVG image of a flower filling its HTML container">
 				<p><span class="scope">Problem:</span> Making images responsive across multiple layouts is challenging when there are so many combinations of sizing, alignment, and fit that can work differently based on the image itself (SVGs in particular) and its containing element(s).</p>
-				<p><span class="scope">Solution:</span> A web component to handle the inconsistencies, isolate the layout and styling, and use element attributes for the basic configuration.</p>
+				<p><span class="scope">Solution:</span> A custom web component to handle the inconsistencies and isolate the layout and styling.</p>
 				<div class="links">
 					<a href="https://wizard04wsu.github.io/adaptive-image/index.html">Demo</a>
 					<a href="https://github.com/wizard04wsu/adaptive-image">GitHub</a>
