fix <p> from last commit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<header>
 		<h1>Andy's Problem-Solving Tools</h1>
 		<p>Various development tools and other fun stuff I've built to make life easier.</p>
-		<span class="fa-brands fa-github"></span> <a href="https://github.com/wizard04wsu">GitHub</a>
+		<p id="contact"></p><span class="fa-brands fa-github"></span> <a href="https://github.com/wizard04wsu">GitHub</a>
 		<span class="fa-brands fa-linkedin"></span> <a href="https://www.linkedin.com/in/andrewharrison404/">LinkedIn</a></p>
 	</header>
 	
